--- a/common/common.scss
+++ b/common/common.scss
@@ -129,11 +129,11 @@ dt {
   font-weight: bold;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
+body h1, body
+h2, body
+h3, body
+h4, body
+h5, body
 h6 {
   color: $primary;
   font-family: inherit;
