--- a/scss/common.scss
+++ b/scss/common.scss
@@ -23,6 +23,7 @@
 // - Topic list
 //   - Category list
 //   - Suggested topics
+// - User card
 
 @import 'common/base';
 @import 'common/base-override';
@@ -42,3 +43,4 @@
 @import 'common/topic-list';
 @import 'common/topic-list-category';
 @import 'common/topic-list-suggested';
+@import 'common/user-card';
