add missing `save` icon in reply box

--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -155,6 +155,10 @@
         @include material-icons;
       }
 
+      .fa-pencil::before {
+        content: 'save';
+      }
+
       .fa-plus::before {
         content: 'add';
       }
