--- a/common/common.scss
+++ b/common/common.scss
@@ -3986,6 +3986,9 @@ nav.post-controls .actions button .read-icon::before {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
 }
+#reply-control .contents .submit-panel .fa-pencil::before {
+  content: 'save';
+}
 #reply-control .contents .submit-panel .fa-plus::before {
   content: 'add';
 }
